# shopping-assistant-ai

./: README.md  SETUP.md  agent.py  agent_tools.py  config.py  conversation_state.py  database.py  fake_store_client.py  main.py  models.py  pyproject.toml  schemas.py  services.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: CartSummary.tsx  ChatInterface.tsx  ProductCards.tsx
